syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.sports";

package com.glance.spaces.zapp.content.sports;

import "com/glance/spaces/zapp/content/common/image.proto";

message StandingsXxlElement {
  repeated string column_headers = 1;
  repeated TeamStandingsRow team_standings = 2;
}

message TeamStandingsRow {
  common.Image team_info = 1;
  repeated string standings_details = 2;
}